<resources>
    <string name="app_name">Eco Verde</string>
    <string name="cd_logo_fazenda">Logo do aplicativo Eco Verde</string>
    <string name="titulo_login">Eco Verde</string>
    <string name="subtitulo_login">Cultive com tecnologia e sustentabilidade</string>
    <string name="boas_vindas_login">Entrar na sua conta</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="criar_conta">Ainda nao tem conta? Criar agora</string>
    <string name="titulo_cadastro">Criar conta</string>
    <string name="subtitulo_cadastro">Monte sua horta urbana em poucos passos</string>
    <string name="boas_vindas_cadastro">Preencha seus dados</string>
    <string name="hint_nome">Nome completo</string>
    <string name="hint_endereco">Endereco</string>
    <string name="hint_pergunta_seguranca">Pergunta de seguranca</string>
    <string name="hint_resposta_seguranca">Resposta de seguranca</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="btn_criar_conta_cadastro">Criar conta</string>
    <string name="ja_tenho_conta">Ja tenho conta</string>
    <string name="titulo_recuperar_senha">Recuperar senha</string>
    <string name="subtitulo_recuperar_senha">Volte para sua fazenda digital</string>
    <string name="boas_vindas_recuperar_senha">Esqueceu sua senha?</string>
    <string name="descricao_recuperar_senha">Informe seu e-mail e responda sua pergunta de seguranca para redefinir a senha.</string>
    <string name="hint_email_recuperacao">E-mail cadastrado</string>
    <string name="btn_enviar_recuperacao">Enviar recuperacao</string>
    <string name="voltar_login_recuperacao">Voltar para login</string>
    <string name="titulo_home_loja">Loja da Eco Verde</string>
    <string name="subtitulo_home_loja">Produtos frescos para sua horta e sua casa</string>
    <string name="titulo_resumo_carrinho">Resumo do carrinho</string>
    <string name="itens_carrinho_home">Itens: 0 produtos</string>
    <string name="itens_carrinho_home_formatado">Itens: %1$d produtos</string>
    <string name="valor_carrinho_home">Total: R$ 0,00</string>
    <string name="valor_carrinho_home_formatado">Total: %1$s</string>
    <string name="btn_ver_carrinho">Ver carrinho</string>
    <string name="secao_produtos">Produtos em destaque</string>
    <string name="carrinho_vazio_titulo">Seu carrinho esta vazio</string>
    <string name="carrinho_vazio_subtitulo">Adicione produtos para visualizar seus itens aqui.</string>
    <string name="produto_alface_nome">Alface Hidroponica</string>
    <string name="produto_alface_preco">R$ 6,90</string>
    <string name="produto_tomate_nome">Tomate Cereja Organico</string>
    <string name="produto_tomate_preco">R$ 12,00</string>
    <string name="produto_morango_nome">Morango Fresco</string>
    <string name="produto_morango_preco">R$ 10,00</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="carregar_mais_produtos">Carregar mais produtos</string>
    <string name="btn_remover">Remover</string>
    <string name="nav_produtos">Produtos</string>
    <string name="nav_carrinho">Carrinho</string>
    <string name="nav_perfil">Perfil</string>
    <string name="cd_produto_alface">Produto alface hidroponica</string>
    <string name="cd_produto_tomate">Produto tomate cereja organico</string>
    <string name="cd_produto_morango">Produto morango fresco</string>
    <string name="titulo_carrinho">Seu carrinho</string>
    <string name="subtitulo_carrinho">Confira os itens selecionados</string>
    <string name="qtd_item_um">Quantidade: 1</string>
    <string name="titulo_resumo_compra">Resumo da compra</string>
    <string name="subtotal_carrinho">Subtotal: R$ 0,00</string>
    <string name="frete_carrinho">Frete: R$ 0,00</string>
    <string name="total_carrinho">Total: R$ 0,00</string>
    <string name="subtotal_carrinho_formatado">Subtotal: %1$s</string>
    <string name="frete_carrinho_formatado">Frete: %1$s</string>
    <string name="total_carrinho_formatado">Total: %1$s</string>
    <string name="btn_finalizar_compra">Finalizar compra</string>
    <string name="btn_voltar">Voltar</string>
    <string name="titulo_perfil">Perfil</string>
    <string name="nome_perfil_mock">Lucas Perez</string>
    <string name="email_perfil_mock">lucas@fazendaurbana.com</string>
    <string name="info_perfil_mock">Acompanhe seus pedidos e dados da conta por aqui.</string>
    <string name="nenhum_produto_cadastrado">Nenhum produto cadastrado ainda.</string>
    <string name="subtitulo_nenhum_produto">Use o painel do admin para adicionar produtos ao estoque.</string>
    <string name="btn_minhas_compras">Minhas compras</string>
    <string name="btn_editar_perfil">Alterar senha</string>
    <string name="btn_editar_endereco">Alterar endereco</string>
    <string name="btn_excluir_conta">Excluir conta</string>
    <string name="titulo_alterar_senha">Alterar senha</string>
    <string name="hint_senha_atual">Senha atual</string>
    <string name="hint_nova_senha">Nova senha</string>
    <string name="hint_confirmar_nova_senha">Confirmar nova senha</string>
    <string name="dialog_editar_perfil_titulo">Editar perfil</string>
    <string name="dialog_nome">Nome</string>
    <string name="dialog_nova_senha">Nova senha</string>
    <string name="dialog_confirmar_senha">Confirmar senha</string>
    <string name="dialog_btn_salvar">Salvar</string>
    <string name="dialog_btn_cancelar">Cancelar</string>
    <string name="dialog_excluir_titulo">Excluir conta</string>
    <string name="dialog_excluir_mensagem">Tem certeza que deseja excluir sua conta? Esta ação nao pode ser desfeita.</string>
    <string name="dialog_excluir_confirmar">Excluir</string>
    <string name="dialog_excluir_cancelar">Cancelar</string>
    <string name="msg_perfil_atualizado">Perfil atualizado com sucesso.</string>
    <string name="msg_senha_atualizada">Senha alterada com sucesso.</string>
    <string name="msg_conta_excluida">Conta excluida com sucesso.</string>
    <string name="msg_compra_realizada">Compra realizada com sucesso! Protocolo: %1$s</string>
    <string name="titulo_minhas_compras">Minhas compras</string>
    <string name="nenhuma_compra">Voce nao fez compras ainda.</string>
    <string name="titulo_detalhe_compra">Detalhe da compra</string>
    <string name="label_protocolo">Protocolo: %1$s</string>
    <string name="label_data_compra">Data: %1$s</string>
    <string name="label_status_compra">Status: %1$s</string>
    <string name="label_produtos_compra">Produtos</string>
    <string name="compra_item_formato">%1$s x %2$d = R$ %3$.2f</string>
    <string name="erro_nome_vazio">Informe seu nome.</string>
    <string name="erro_senha_atual_vazia">Informe sua senha atual.</string>
    <string name="erro_senha_atual_incorreta">Senha atual incorreta.</string>
    <string name="erro_senha_curta">A senha deve ter pelo menos 6 caracteres.</string>
    <string name="erro_senha_diferente">As senhas nao conferem.</string>
    <string name="erro_excluir_conta">Nao foi possivel excluir a conta.</string>
    <string name="erro_usuario_nao_encontrado">Usuario nao encontrado.</string>
    <string name="erro_salvar_senha">Nao foi possivel atualizar a senha.</string>
    <string name="label_endereco">Endereco: %1$s</string>
    <string name="endereco_nao_informado">Nao informado</string>
    <string name="titulo_alterar_endereco">Alterar endereco</string>
    <string name="hint_endereco_perfil">Novo endereco</string>
    <string name="msg_endereco_atualizado">Endereco atualizado com sucesso.</string>
    <string name="erro_endereco_vazio">Informe um endereco valido.</string>
    <string name="erro_salvar_endereco">Nao foi possivel atualizar o endereco.</string>

    <string-array name="perguntas_seguranca">
        <item>Qual o nome do seu primeiro pet?</item>
        <item>Qual a cidade em que voce nasceu?</item>
        <item>Qual era o apelido da sua infancia?</item>
        <item>Qual o nome da sua escola primaria?</item>
    </string-array>
</resources>
